<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth2</string>
    <string name="title_activity_main">Bluetooth2</string>
    <string name="btn_ON">LED ON</string>
    <string name="btn_OFF">LED OFF</string>
    <string name="title_activity_threshold">Threshold</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Threshold</string>
    <string name="Above">Above</string>
    <string name="Below">Below</string>
    <string name="Between">Between</string>
    <string name="Sensor">Sensor</string>
    <string name="threshold1">Threshold 1</string>
    <string name="threshold2">Threshold 2</string>
    <string name="MP3">MP3</string>
    <string name="select">Choose a Sensor</string>
    <string name="button_graph">Graph</string>

    <string-array name="sensor_array">
        <item>Sonar</item>
        <item>Pressure</item>
        <item>Gyrometer</item>
    </string-array>

    <string name="title_activity_graph">Graph</string>

</resources>