<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Threshold" >

    <RadioGroup android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	<RadioButton
	        android:id="@+id/aboveRB"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginTop="27dp"
	        android:text="@string/Above" />
	    <RadioButton
	        android:id="@+id/belowRB"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/Below" />
	    <RadioButton
	        android:id="@+id/betweenRB"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/Between" />
	</RadioGroup>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" 
        android:entries="@array/sensor_array"
   		android:prompt="@string/select"/>
    

    <TextView
        android:id="@+id/threshold2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/threshold1"
        android:layout_below="@+id/threshold1"
        android:layout_marginTop="27dp"
        android:text="@string/threshold2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/threshold1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="21dp"
        android:text="@string/threshold1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editThresh2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/threshold2"
        android:layout_alignBottom="@+id/threshold2"
        android:layout_alignLeft="@+id/editThresh1"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner1"
        android:text="@string/Sensor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/threshold2"
        android:layout_below="@+id/editThresh2"
        android:layout_marginTop="34dp"
        android:text="@string/MP3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editThresh1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/threshold1"
        android:layout_alignBottom="@+id/threshold1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editThresh2"
        android:layout_alignTop="@+id/mp3"
        android:onClick="graphDisplay"
        android:text="@string/button_graph" />

</RelativeLayout>